--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="apple-touch-icon" sizes="180x180" href="../assets/logo/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../assets/logo/favicon-32x32.png">
@@ -13,16 +14,26 @@
 
 <body class="colorFondo">
     <header id="colorHeader" class="stickyHeader">
-        <div>
-            <img class="imgHeader imgRedonda" src="../assets/logo/O.png" alt="logo"> 
+        <div> <!-- Brand/logo -->
+            <img class="imgHeader imgRedonda" src="../assets/logo/O.png" alt="logo">
         </div>
-        <nav> <!-- Barra de navegacion -->
-            <ul>
-                <li><a href="../index.html">INICIO</a></li>
-                <li><a href="./equipo.html">EQUIPO</a></li>
-                <li><a href="./servicios.html">SERVICIOS</a></li>
-                <li><a href="./articulos.html">ARTÍCULOS</a></li>
-                <li><a href="./contacto.html">CONTACTO</a></li>
+        <nav class="navbar navbar-expand-sm navbar-dark">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="../index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./equipo.html">Equipo</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./servicios.html">Servicios</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./articulos.html">Articulos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./contacto.html">Contacto</a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -85,5 +96,9 @@
             </div>
         </nav>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
 </body>
 </html>
