segunda versión, se incluyó SASS y conceptos de CEO

--- a/pages/equipo.html
+++ b/pages/equipo.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Equipo de profesionales que trabajan en AMARE, dedicados a la Nutrición Materno Infantil">
+    <meta name="keywords" content="AMARE, equipo, profesionales, nutricionistas, nutrición materno infantil, nutrición, maternidad, embarazo, niñez">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="apple-touch-icon" sizes="180x180" href="../assets/logo/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../assets/logo/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../assets/logo/favicon-16x16.png">
-    <title>AMARE NMI</title>
+    <title>AMARE NMI - Equipo</title>
 </head>
 
 <body class="colorFondo">
@@ -19,19 +21,19 @@
         </div>
         <nav class="navbar navbar-expand-sm navbar-dark">
             <ul class="navbar-nav">
-                <li class="nav-item">
+                <li class="nav-item paginasLi">
                     <a class="nav-link" href="../index.html">Inicio</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item paginasLi">
                     <a class="nav-link" href="./equipo.html">Equipo</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./servicios.html">Servicios</a>
+                <li class="nav-item paginasLi">
+                    <a class="nav-link paginasLi" href="./servicios.html">Servicios</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item paginasLi">
                     <a class="nav-link" href="./articulos.html">Articulos</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item paginasLi">
                     <a class="nav-link" href="./contacto.html">Contacto</a>
                 </li>
             </ul>
@@ -51,8 +53,8 @@
             <div class="text-center">
                 <h2>CONOCENOS</h2>
             </div>
-            <div>
-                <article>
+            <div class="perfiles">
+                <article class="perfil">
                     <img class="imgTamaño imgRedonda" src="../assets/equipo/equipo-perfil.jpg" alt="foto pefil">
                     <h3>María Azul Tavella</h3>
                     <p>Nutricionista Materno Infantil</p>
@@ -62,7 +64,7 @@
                     <p>Certificación Internacional en Nutrición Clínica Pediátrica</p>
                     <p>Certificación ISAK Nivel 1</p>
                 </article>
-                <article>
+                <article class="perfil">
                     <img class="imgTamaño imgRedonda" src="../assets/equipo/equipo-perfil-avatar.png" alt="foto perfil">
                     <h3>María Ortale</h3>
                     <p>Nutricionista Materno Infantil</p>
@@ -72,7 +74,7 @@
                     <p>Diplomado en nutrición infantil</p>
                     <p>Certificación ISAK Nivel 1</p>
                 </article>
-                <article>
+                <article class="perfil">
                     <img class="imgTamaño imgRedonda" src="../assets/equipo/equipo-perfil-avatar.png" alt="foto perfil">
                     <h3>Juliana Garganta</h3>
                     <p>Estudiante de Licenciatura en Nutrición UCALP</p>
@@ -87,7 +89,7 @@
         </section>
     </main>
         
-    <footer id="footer"> <!-- Copyright y redes sociales -->
+    <footer class="footer"> <!-- Copyright y redes sociales -->
         <aside>
             <p>Copyright</p>
         </aside>
@@ -116,6 +118,7 @@
             </div>
         </aside>
     </footer>
+    
     <div>
         <svg class="subir" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-up" viewBox="0 0 16 16">
             <path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z"/>
