--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Página dedicada a la Nutrición Materno Infantil">
+    <meta name="keywords" content="AMARE, nutrición materno infantil, nutrición, maternidad, embarazo, niñez">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/logo/apple-touch-icon.png">
@@ -16,7 +18,7 @@
     <div class="divInicio"> 
         
         <main class="inicioMain container text-center">
-            <img class="imgInicio imgRedonda" src="./assets/logo/logo-amare.png" alt="logo"> 
+            <img class="imgInicio imgRedonda" src="./assets/logo/O.png" alt="logo"> 
             <h1>AMARE</h1>
             <h2>Nutrición Materno Infantil</h2>
         </main>
@@ -34,7 +36,7 @@
                         <a class="nav-link" href="./pages/servicios.html">Servicios</a>
                     </li>
                     <li class="nav-item inicioLi">
-                        <a class="nav-link" href="./pages/articulos.html">Articulos</a>
+                        <a class="nav-link" href="./pages/articulos.html">Artículos</a>
                     </li>
                     <li class="nav-item inicioLi">
                         <a class="nav-link" href="./pages/contacto.html">Contacto</a>
