--- a/pages/articulos.html
+++ b/pages/articulos.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Artículos de interés para profesionales e interesados en la nutrición materno infantil">
+    <meta name="keywords" content="AMARE, artículos, baberos, recetarios, nutrición materno infantil, nutrición, maternidad, embarazo, niñez">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="apple-touch-icon" sizes="180x180" href="../assets/logo/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../assets/logo/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../assets/logo/favicon-16x16.png">
-    <title>AMARE NMI</title>
+    <title>AMARE NMI - Artículos</title>
 </head>
 
 <body class="colorFondo">
@@ -63,7 +65,7 @@
         <a href="https://drive.google.com/file/d/1Koqn7XLzA-aqbalMULb8fYQMmFZXQzip/view">Guía de alimentación UNICEF</a>
     </section>
         
-    <footer id="footer"> <!-- Copyright y redes sociales -->
+    <footer class="footer"> <!-- Copyright y redes sociales -->
         <section>
             <p>Copyright</p>
         </section>
