--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Infomación de contacto y ubicación con el equipo de AMARE Nutrición Materno Infantil">
+    <meta name="keywords" content="AMARE, contacto, hospital italiano, la plata, nutrición materno infantil, nutrición, maternidad, embarazo, niñez">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="apple-touch-icon" sizes="180x180" href="../assets/logo/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../assets/logo/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../assets/logo/favicon-16x16.png">
-    <title>AMARE NMI</title>
+    <title>AMARE NMI - Contacto</title>
 </head>
 
 <body class="colorFondo">
@@ -124,7 +126,7 @@
         </section>
     </main>
     
-    <footer id="footer"> <!-- Copyright y redes sociales -->
+    <footer class="footer"> <!-- Copyright y redes sociales -->
         <section>
             <p>Copyright</p>
         </section>
