Uso de Bootstrap para terminar de armar todas las paginas HTML. Arrgelos en el estilo de la pagina

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="divInicio"> 
         
         <main class="inicioMain container text-center">
-            <img class="imgInicio imgRedonda" src="./assets/logo/O.png" alt="logo"> 
+            <img src="./assets/logo/O.png" alt="logo"> 
             <h1>AMARE</h1>
             <h2>Nutrición Materno Infantil</h2>
         </main>
