mejoras de estilo con Bootstrap en contacto y equipo

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -63,19 +63,19 @@
                     <form action="">
                         <div class="form-group"> <!--Campo para Nombre y Apellido-->
                             <label for="nombreApellido">Nombe y Apellido</label>
-                            <input class="form-control" type="text" name="nombreApellido" id="nombreApellido" placeholder="Juana Gonzales">
+                            <input class="form-control colorInput" type="text" name="nombreApellido" id="nombreApellido" placeholder="Juana Gonzales">
                         </div>
                         <div class="form-group"> <!--Campo para numero de telefono-->
                             <label for="telefono">Teléfono</label>
-                            <input class="form-control" type="tel" name="telefono" id="telefono" placeholder="221-123-4567">
+                            <input class="form-control colorInput" type="tel" name="telefono" id="telefono" placeholder="221-123-4567">
                         </div>
                         <div class="form-group"> <!--Campo para mail-->
                             <label for="correoElectronico">Correo electrónico</label>
-                            <input class="form-control" type="email" name="correoElectronico" id="correoElectronico" placeholder="tunombre@tucorreo.com">
+                            <input class="form-control colorInput" type="email" name="correoElectronico" id="correoElectronico" placeholder="tunombre@tucorreo.com">
                         </div>
                         <div class="form-group">
                             <label for="servicio">Seleccioná el servicio</label>
-                            <select class="form-control" name="servicio" id="servicio">
+                            <select class="form-control colorInput" name="servicio" id="servicio">
                                 <option value="nutricionAntesDelEmbarazo">Nutrición antes del embarazo</option>
                                 <option value="nutricionDuranteElEmbarazo">Nutrición durante el embarazo</option>
                                 <option value="lactanciaMaterna">Nutrición durante la lactancia</option>
@@ -86,7 +86,7 @@
                         <div class="form-group">
                             <!--Campo para fecha y horario del turno-->
                             <label for="turno">Fecha del turno</label>
-                            <input class="form-control" type="datetime-local" name="turno" id="turno">
+                            <input class="form-control colorInput" type="datetime-local" name="turno" id="turno">
                         </div>
                         <div class="form-group text-center"> <!--Boton de enviar-->
                             <input class="btnContacto" type="submit" value="Reservar">
@@ -114,15 +114,15 @@
                     <form action="">
                         <div class="form-group"><!--Campo para Nombre y aprellido-->
                             <label for="nombreApellido">Nombre y Apellido</label>
-                            <input class="form-control" type="text" name="nombreApellido" id="nombreApellido" placeholder="Juana Gonzales">
+                            <input class="form-control colorInput" type="text" name="nombreApellido" id="nombreApellido" placeholder="Juana Gonzales">
                         </div>
                         <div class="form-group"><!--Campo para el mail-->
                             <label for="correoElectronico">Correo electrónico</label>
-                            <input class="form-control" type="email" name="correoElectronico" id="correoElectronico" placeholder="tunombre@tucorreo.com">
+                            <input class="form-control colorInput" type="email" name="correoElectronico" id="correoElectronico" placeholder="tunombre@tucorreo.com">
                         </div>
                         <div class="form-group"><!--Campo para ingresar la consulta a enviar-->
                             <label for="comentarios">Tu consulta</label>
-                            <textarea class="form-control" name="comentarios" id="comentarios" cols="30" rows="5" placeholder="Escribinos tu consulta!"></textarea>
+                            <textarea class="form-control colorInput" name="comentarios" id="comentarios" cols="30" rows="5" placeholder="Escribinos tu consulta!"></textarea>
                         </div>
                         <div class="form-group text-center"><!--Botón de enviar-->  
                             <input class="btnContacto" type="submit" value="Enviar">
