--- a/pages/equipo.html
+++ b/pages/equipo.html
@@ -59,7 +59,7 @@
                 <h2>CONOCENOS</h2>
             </div>
             <div class="perfiles">
-                <article>
+                <article class="flex-md-column flex-lg-row">
                     <div>
                         <img src="../assets/equipo/equipo-perfil.jpg" alt="foto pefil">
                     </div>
@@ -75,7 +75,7 @@
                         <p>Certificación ISAK Nivel 1</p>
                     </div>
                 </article>
-                <article>
+                <article class="flex-md-column flex-lg-row">
                     <div>
                         <img src="../assets/equipo/equipo-perfil-avatar.png" alt="foto perfil">
                     </div>
@@ -91,7 +91,7 @@
                         <p>Certificación ISAK Nivel 1</p>
                     </div>
                 </article>
-                <article>
+                <article class="flex-md-column flex-lg-row">
                     <div>
                         <img src="../assets/equipo/equipo-perfil-avatar.png" alt="foto perfil">
                     </div>
@@ -138,12 +138,7 @@
             </div>
         </aside>
     </footer>
-    
-    <div>
-        <svg class="subir" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-up" viewBox="0 0 16 16">
-            <path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z"/>
-        </svg>
-    </div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
