Correccion de Bootstrap en la seccion de conocenos. cambio en perfiles flex-md-column por flex-column

--- a/pages/equipo.html
+++ b/pages/equipo.html
@@ -59,7 +59,7 @@
                 <h2>CONOCENOS</h2>
             </div>
             <div class="perfiles">
-                <article class="flex-md-column flex-lg-row">
+                <article class="flex-column flex-lg-row">
                     <div>
                         <img src="../assets/equipo/equipo-perfil.jpg" alt="foto pefil">
                     </div>
@@ -75,7 +75,7 @@
                         <p>Certificación ISAK Nivel 1</p>
                     </div>
                 </article>
-                <article class="flex-md-column flex-lg-row">
+                <article class="flex-column flex-lg-row">
                     <div>
                         <img src="../assets/equipo/equipo-perfil-avatar.png" alt="foto perfil">
                     </div>
@@ -91,7 +91,7 @@
                         <p>Certificación ISAK Nivel 1</p>
                     </div>
                 </article>
-                <article class="flex-md-column flex-lg-row">
+                <article class="flex-column flex-lg-row">
                     <div>
                         <img src="../assets/equipo/equipo-perfil-avatar.png" alt="foto perfil">
                     </div>
